# python-zulip-api

./: .codecov.yml  .editorconfig  .flake8  .gitignore  .gitlint  .mailmap  .travis.yml  CONTRIBUTING.md  LICENSE  README.md  THIRDPARTY  mypy.ini  py3_requirements.txt  pyproject.toml  requirements.txt  setup.py  snoozebot.py  test_function.py
tools/: deploy  (+26 more)
zulip/: CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  setup.py
zulip/examples/: create-user  edit-message  get-presence  get-public-streams  list-members  list-subscriptions  print-events  print-messages  recent-messages  send-message  subscribe  unsubscribe  upload-file
zulip/integrations/bridge_between_zulips/: README.md  interrealm_bridge_config.py  run-interrealm-bridge
zulip/integrations/bridge_with_irc/: README.md  doc.md  irc-mirror.py  irc_mirror.conf  irc_mirror_backend.py  requirements.txt
zulip/integrations/bridge_with_matrix/: README.md  matrix_bridge.conf  matrix_bridge.py  requirements.txt  test_matrix.py  todo.md
zulip/integrations/bridge_with_slack/: README.md  bridge_with_slack_config.py  requirements.txt  run-slack-bridge
zulip/integrations/clickup/: README.md  test_zulip_clickup.py  zulip_clickup.py
zulip/integrations/codebase/: zulip_codebase_config.py  zulip_codebase_mirror
zulip/integrations/confluence/: confluence  confluence.py
zulip/integrations/discord/: README.md  bridge.py  requirements.txt
zulip/integrations/git/: doc.md  post-receive  zulip_git_config.py
zulip/integrations/google/: doc.md  get-google-credentials  google-calendar  requirements.txt
zulip/integrations/hg/: requirements.txt  zulip-changegroup.py  zulip_changegroup.py
zulip/integrations/irc/: irc-mirror.py  irc_mirror_backend.py
zulip/integrations/jabber/: jabber_mirror.py  jabber_mirror_backend.py  requirements.txt
zulip/integrations/jira/: doc.md
zulip/integrations/langchain/: langchain.conf  langchain_bot.py
zulip/integrations/litellm/: README.md  summarize-topic
zulip/integrations/log2zulip/: log2zulip
zulip/integrations/matrix/: README.md  matrix_bridge.conf  matrix_bridge.py  matrix_bridge_config.py  requirements.txt  test_matrix.py
zulip/integrations/nagios/: nagios-notify-zulip
zulip/integrations/openshift/: post_deploy  zulip_openshift_config.py
zulip/integrations/perforce/: git_p4.py  zulip_change-commit.py  zulip_perforce_config.py
zulip/integrations/rocket.chat/: README.md  rocket.chat-mirror  rocket_mirror_config.py
zulip/integrations/rss/: doc.md  requirements.txt  rss-bot
zulip/integrations/slack/: README.md  requirements.txt  slackdata2zulipdata.py  zerver_realm_skeleton.json
zulip/integrations/svn/: doc.md  post-commit  (+2 more)
zulip/tests/: __init__.py  test_api.py  test_default_arguments.py  test_hash_util_decode.py  test_rate_limit_handling.py  test_zuliprc
zulip/zulip/: __init__.py  api_examples.py  asynch.py  cli.py  send.py
(+538 files in other folders)
