[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zulip"
dynamic = ["version"]
description = "Bindings for the Zulip message API"
readme = "README.md"
authors = [
    {name = "Zulip Open Source Project", email = "zulip-devel@googlegroups.com"}
]
license = "Apache-2.0"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Topic :: Communications :: Chat",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "requests[security]>=0.12.1",
    "distro",
    "click",
    "typing_extensions>=4.5.0",
]

[project.urls]
Homepage = "https://www.zulip.org/"
Source = "https://github.com/zulip/python-zulip-api/"
Documentation = "https://zulip.com/api"

[project.scripts]
zulip-send = "zulip.send:main"
zulip-api-examples = "zulip.api_examples:main"
zulip-matrix-bridge = "integrations.bridge_with_matrix.matrix_bridge:main"
zulip-api = "zulip.cli:cli"

[tool.hatch.version]
path = "zulip/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["zulip"]
exclude = ["tests"]

[tool.hatch.build.targets.wheel.shared-data]
"integrations" = "share/zulip/integrations"
